# LLMs-from-scratch

./: Dockerfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  starship.toml
