[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Build LLM from scratch"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel==6.30.*",
    "jupyterlab==4.4.*",
    "jupyterlabcodetoc==4.0.*",
    "matplotlib==3.10.*",
    "numpy>=1.26,<2.1",
    "packages==0.1.1",
    "pandas==2.3.*",
    "pip==25.2.*",
    "pytest==8.4.*",
    "scikit-learn==1.7.*",
    "scipy==1.16.*",
    "statsmodels==0.14.*",
    "tensorflow==2.19.*",
    "tiktoken==0.9.*",
    "torch==2.7.*",
    "tqdm==4.67.*",
    "watermark==2.5.*",
]

[tool.uv.sources]
llms-from-scratch = { workspace = true }

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "llms-from-scratch",
    "twine>=6.1.0",
    "tokenizers>=0.21.1",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
exclude = [".venv"]
# Ignored rules (W504 removed)
ignore = [
    "C406", "E226", "E402", "E702", "E703",
    "E722", "E731", "E741"
]


# `llms_from_scratch` PyPI package

[tool.setuptools]
package-dir = {"" = "pkg"}

[tool.setuptools.packages.find]
where = ["pkg"]